feat(rule engine): added typings for device ID
