# src/api/models/JWT.ts
@@ -2,13 +2,14 @@
 /* istanbul ignore file */
 /* tslint:disable */
 /* eslint-disable */
-import type { CodeResult } from './CodeResult';
 export type JWT = {
-    code?: CodeResult;
+    /**
+     * Device ID
+     */
+    deviceID?: string;
     /**
      * JWT access token
      */
     jwtAccess: string;
-    deviceID?: string;
 };
 
